# rain-blueprint

./: .env.example  .gitignore  BLUEPRINT-INDEX.md  BUILD-DESKTOP-EXE.md  CLAUDE.md  PART-1.md  PART-10.md  PART-11.md  PART-12.md  PART-2.md  PART-3.md  PART-4.md  PART-5.md  PART-6.md  PART-7.md  PART-8.md  PART-9.md  RAIN-BLUEPRINT.md  RAIN-Install-and-Run.bat  RAIN-Install-and-Run.ps1  README.md  docker-compose.gpu.yml  docker-compose.prototype.yml  docker-compose.yml  rain-install.sh  run-rain.bat  run-rain.sh
.claude/: launch.json  plan.md
.github/workflows/: ci.yml
backend/: dev-server.py  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: dependencies.py
backend/app/api/routes/: aie.py  assist.py  auth.py  billing.py  distribution.py  download.py  lora.py  master.py  provenance_routes.py  qc.py  score.py  separate.py  sessions.py  suno_import.py  upload.py  waitlist.py  whitelabel.py  (+1 more)
backend/app/core/: audio_io.py  bpm.py  config.py  database.py  feature_gates.py  metrics.py  observability.py  rate_limit.py  security.py  session_store.py  tiers.py
backend/app/models/: __init__.py  aie.py  cert.py  content_scan.py  enums.py  lora.py  quota.py  release.py  session.py  stem.py  subscription.py  user.py  workspace.py
backend/app/schemas/: auth.py  release.py  session.py
backend/app/services/: ai_declaration.py  aie_vector.py  atmos.py  audio_analysis.py  billing.py  claude_service.py  ddex.py  feature_extraction.py  groove_engine.py  heuristic_params.py  identifiers.py  inference.py  intent_engine.py  intent_vector.py  labelgrid.py  loudness_penalty.py  master_engine.py  metadata_engine.py  platform_targets.py  provenance.py  provenance_models.py  provenance_pipeline.py  qc_engine.py  quota.py  rain_score.py  rain_score_v2.py  score_profiles.py  separation_engine.py  storage.py  track_diagnosis.py  wasm_bridge.py
backend/app/tasks/: aie.py  analysis.py  certification.py  content_scan.py  demucs.py  distribution.py  lora_training.py  provenance.py  render.py  separation.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_enterprise_tables.py  0003_identifiers_aie_refresh.py  0004_session_provenance_columns.py  0005_seed_founder_account.py  0006_uuidv7_defaults.py
backend/scripts/: seed_admin_user.py
backend/tests/: conftest.py  test_aie_vector.py  test_auth.py  test_ddex_ai_disclosure.py  test_download_formats.py  test_loudness_penalty.py  test_master_engine.py  test_quota.py  test_rls.py  test_separation_model_loading.py  test_spec_compliance.py  test_upload.py  test_wasm_bridge_fallback.py
docker/: Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  Dockerfile.frontend.prod  Dockerfile.worker  Dockerfile.worker.gpu
docs/: ARCHITECTURE-PIPELINE.md  OSMEF-v1.0.md  SCHEMA-NAMING.md
docs/adr/: 0001-local-first-processing.md  0002-dual-path-preview-render.md  0003-browser-server-ml-split.md  0004-bs-roformer-over-demucs.md  0005-c2pa-audioseal-provenance.md  0006-hetzner-coolify-infrastructure.md  0007-six-tier-pricing-architecture.md  0008-sequential-identifier-allocation.md  0009-processing-params-canonical-schema.md  0010-64-dim-artist-identity-vector.md  0011-valkey-over-redis.md  0012-celery-tier-based-queue-routing.md  0013-larsnet-license.md  README.md
frontend/: dev-server.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/wasm/: rain_dsp.js  rain_dsp.wasm  rain_dsp.wasm.sha256
frontend/src/: App.tsx  index.css
frontend/src/audio/: AudioEngine.ts
frontend/src/hooks/: useLocalRender.ts  useVoiceCommands.ts
frontend/src/stores/: audioStore.ts  auth.ts  session.ts
frontend/src/types/: ai_disclosure.ts  dsp.ts  tiers.ts
frontend/src/utils/: analytics.ts  api.ts  heuristic-params.ts  preview-engine.ts  wasm-loader.ts
frontend/src/views/: AppLayout.tsx  AssistantView.tsx  AuthLayout.tsx  LandingPage.tsx  LoginView.tsx  RegisterView.tsx
ml/analog_net/: model.py
ml/codec_net/: model.py
ml/genre_classifier/: model.py
ml/rainnet/: dataset.py  export.py  heuristics.py  model.py  train.py
ml/reference_encoder/: model.py
ml/spectral_repair/: model.py
models/: rain_base.onnx  rain_trained.onnx
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: rain_overview.json
nginx/: nginx.conf
notebooks/: train_rainnet_v2.ipynb
rain-desktop/: README.md  package.json
rain-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rain-desktop/src-tauri/src/: main.rs  state.rs
rain-desktop/src-tauri/src/commands/: auth.rs  mod.rs  offline.rs  session.rs  sync.rs
rain-dsp/: CMakeLists.txt  build_wasm.sh
rain-dsp/data/: tp_fir_generator.cpp
rain-dsp/include/: fft.h  linear_phase_eq.h  lufs.h  ms_processing.h  multiband.h  rain_dsp.h  riaa.h  sail.h  saturation.h  true_peak.h
rain-dsp/include/rain/: biquad.h  limiter.h
rain-dsp/python_bindings/: CMakeLists.txt  bindings.cpp
rain-dsp/src/: biquad.cpp  fft.cpp  limiter.cpp  linear_phase_eq.cpp  lufs.cpp  main.cpp  ms_processing.cpp  multiband.cpp  riaa.cpp  sail.cpp  saturation.cpp  true_peak.cpp
rain-dsp/tests/: test_kweight.cpp  test_lufs.cpp  test_ms.cpp  test_multiband.cpp  test_riaa.cpp  test_true_peak.cpp
rain-plugin/: CMakeLists.txt  README.md
rain-plugin/Source/: MixBusAnalyzer.cpp  MixBusAnalyzer.h  OscBridge.cpp  RainConnectEditor.cpp  RainConnectProcessor.cpp  RainConnectProcessor.h
rain-tests/: TEST_PROTOCOL_REPORT.md  run_protocol_demo.py  run_tests.py  test_report.md
rain-tests/backend/: test_protocol.py
rain-tests/e2e/: test_protocol.spec.ts
rain-tests/frontend/: package.json  setup.ts  test_protocol.tsx  vitest.config.ts
rain-tests/performance/: test_protocol.py
rain-tests/security/: test_protocol.py
scripts/: auto_export_when_done.sh  deploy.sh  download_models.py  e2e_render_test.py  generate_icon.py  generate_test_fixture.py  init-postgres.sql  launch_check.py  rain_launcher.py  setup.sh  train_runpod.sh
tests/e2e/: mastering-flow.spec.ts  playwright.config.ts
tests/load/: mastering_load.js
(+57 files in other folders)
