[package]
name = "rain-desktop"
version = "6.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"

[lib]
name = "rain_desktop_lib"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
